TestOptionsWithRanges.java of '-XX:TLABWasteTargetPercent=100' fails intermittently

XMLWordPrintable

    • gc
    • b07
    • x86_64
    • linux

        While testing the fix for JDK-8199813 in Mach5, the following
        test failed once:

        runtime/CommandLine/OptionsValidation/TestOptionsWithRanges.java

        Here is a snippet of the .jtr file:

        ----------System.err:(24/1918)----------
        TEST FAILED: Error processing option TLABWasteTargetPercent with valid value '-server -XX:+UseSerialGC -XX:TLABWasteTargetPercent=100'! JVM exited with unexpected error code = 139 [0x8B]
        stdout content[Error occurred during initialization of VM
        GC triggered before VM initialization completed. Try increasing NewSize, current value 157M.
        ]
        stderr content[]

        java.lang.RuntimeException: 1 tests failed! (Error processing option TLABWasteTargetPercent with valid value '-server -XX:+UseSerialGC -XX:TLABWasteTargetPercent=100'! JVM exited with unexpected error code = 139 [0x8B])
        : expected 1 to equal 0
        at jdk.test.lib.Asserts.fail(Asserts.java:594)
        at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
        at jdk.test.lib.Asserts.assertEQ(Asserts.java:178)
        at TestOptionsWithRanges.main(TestOptionsWithRanges.java:138)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:564)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:115)
        at java.base/java.lang.Thread.run(Thread.java:842)

        JavaTest Message: Test threw exception: java.lang.RuntimeException: 1 tests failed! (Error processing option TLABWasteTargetPercent with valid value '-server -XX:+UseSerialGC -XX:TLABWasteTargetPercent=100'! JVM exited with unexpected error code = 139 [0x8B])
        : expected 1 to equal 0
        JavaTest Message: shutting down test

        STATUS:Failed.`main' threw exception: java.lang.RuntimeException: 1 tests failed! (Error processing option TLABWasteTargetPercent with valid value '-server -XX:+UseSerialGC -XX:TLABWasteTargetPercent=100'! JVM exited with unexpected error code = 139 [0x8B]) : expected 1 to equal 0


        This error message on stdout stands out to me:

        Error occurred during initialization of VM
        GC triggered before VM initialization completed. Try increasing NewSize, current value 157M.

        Also, I looked for an hs_err_pid file, but did not find one.

              Assignee:
              Thomas Schatzl
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              12 Start watching this issue

                Created:
                Updated:
                Resolved: