8200365: TestOptionsWithRanges.java of '-XX:TLABWasteTargetPercent=100' fails intermittently

For initial TLAB sizing, increase the number of expected refills to 2.

Reviewed-by: phh, sangheki